# app-vlc-ohos

./: .gitignore  .gitmodules  README.md  build-profile.json5  run-ohos-app.sh
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: Porting_VLC_to_OpenHarmony_research.md  vlc_contrib_audit.md  vlc_ohos_implementation_plan.md  vlc_ohos_napi_architecture.md
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/types/libvlcnative/: index.d.ts  oh-package.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  PlayerPage.ets
entry/src/main/ets/services/: VlcService.ets
entry/src/main/resources/base/element/: string.json
modules/audio_output/: ohos_aout.c
modules/video_output/: ohos_vout.c
napi/: vlc_events.cpp  vlc_instance_wrap.cpp  vlc_media_wrap.cpp  vlc_mediaplayer_wrap.cpp  vlc_napi.h  vlc_napi_module.cpp
scripts/: build_libvlc_ohos.sh  build_ohos.sh  run-ohos-app.sh
signatures/: UnsgnedReleasedProfileTemplate.json  app1-profile.p7b
